# WeatherStation-ESP32-Sensor

./: .gitignore  CMakeLists.txt  README.md  __sdkconfig.firebeetle32__  platformio.ini  sdkconfig.defaults
components/sensor_driver/: CMakeLists.txt
components/sensor_driver/include/: bme280_sensor_driver.h  hdc1080_sensor_driver.h  sensor_driver.h  sensor_driver_bme280.h
components/sensor_driver/src/: bme280_sensor_driver.c  hdc1080_sensor_driver.c  sensor_driver.c  sensor_driver_bme280.c
components/wifi_smartconfig/include/: wifi.h
components/wifi_smartconfig/src/: wifi_smartconfig.c
src/: main.c
